--- a/pom.xml
+++ b/pom.xml
@@ -17,5 +17,10 @@
                 <artifactId>htmlunit-driver</artifactId>
                 <version>2.20</version>
             </dependency>
+            <dependency>
+                <groupId>junit</groupId>
+                <artifactId>junit</artifactId>
+                <version>4.12</version>
+            </dependency>
         </dependencies>
 </project>
